--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^4.1.0",
     "browser-sync": "^2.23.7",
     "browserify": "^16.2.0",
     "eslint": "^4.19.1",
@@ -24,6 +25,7 @@
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "vinyl-source-stream": "^2.0.0"
   }
 }
